--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Options</title>
+		<title>Настройки</title>
 		<link rel="stylesheet" href="options.css">
 	</head>
 	<body>
@@ -12,27 +12,27 @@
 				<div id="mainview-content">
 					<div id="page-container">
 						<div id="personal-page" class="page">
-							<h1>Settings</h1>
+							<h1>Настройки</h1>
 							<div class="displaytable">
 								<section>
-									<h3>Desktop Notifications</h3>
+									<h3>Уведомления в системном трее</h3>
 									<div>
 										<div>
 											<span>
-												Would you like to receive desktop notifications?
+												Хотите ли вы получать уведомления о новых сообщениях в системном трее?
 											</span>
 										</div>
 										<div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="1" checked>
-													<span>Yes</span>
+													<span>Да</span>
 												</label>
 											</div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="0">
-													<span>No</span>
+													<span>Нет</span>
 												</label>
 											</div>
 										</div>
