Charset changed to UTF-8.

--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Настройки</title>
+		<title>РќР°СЃС‚СЂРѕР№РєРё</title>
 		<link rel="stylesheet" href="options.css">
 	</head>
 	<body>
@@ -12,27 +12,27 @@
 				<div id="mainview-content">
 					<div id="page-container">
 						<div id="personal-page" class="page">
-							<h1>Настройки</h1>
+							<h1>РќР°СЃС‚СЂРѕР№РєРё</h1>
 							<div class="displaytable">
 								<section>
-									<h3>Уведомления в системном трее</h3>
+									<h3>РЈРІРµРґРѕРјР»РµРЅРёСЏ РІ СЃРёСЃС‚РµРјРЅРѕРј С‚СЂРµРµ</h3>
 									<div>
 										<div>
 											<span>
-												Хотите ли вы получать уведомления о новых сообщениях в системном трее?
+												РҐРѕС‚РёС‚Рµ Р»Рё РІС‹ РїРѕР»СѓС‡Р°С‚СЊ СѓРІРµРґРѕРјР»РµРЅРёСЏ Рѕ РЅРѕРІС‹С… СЃРѕРѕР±С‰РµРЅРёСЏС… РІ СЃРёСЃС‚РµРјРЅРѕРј С‚СЂРµРµ?
 											</span>
 										</div>
 										<div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="1" checked>
-													<span>Да</span>
+													<span>Р”Р°</span>
 												</label>
 											</div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="0">
-													<span>Нет</span>
+													<span>РќРµС‚</span>
 												</label>
 											</div>
 										</div>
