Added English, Russian and Ukrainian localizations. Updated YUI to 3.16.0.

--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
-<html>
+﻿<html>
 	<head>
-		<title>Настройки</title>
+		<title></title>
 		<link rel="stylesheet" href="options.css">
 	</head>
 	<body>
@@ -12,27 +12,25 @@
 				<div id="mainview-content">
 					<div id="page-container">
 						<div id="personal-page" class="page">
-							<h1>Настройки</h1>
+							<h1 id="optionsHeader"></h1>
 							<div class="displaytable">
 								<section>
-									<h3>Уведомления в системном трее</h3>
+									<h3 id="optionsDNHeader"></h3>
 									<div>
 										<div>
-											<span>
-												Хотите ли вы получать уведомления о новых сообщениях в системном трее?
-											</span>
+											<span id="optionsDNText"></span>											</span>
 										</div>
 										<div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="1" checked>
-													<span>Да</span>
+													<span id="optionsDNYes"></span>
 												</label>
 											</div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="base_notifier_desktop_notifications" value="0">
-													<span>Нет</span>
+													<span id="optionsDNNo"></span>
 												</label>
 											</div>
 										</div>
