--- a/background.html
+++ b/background.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 	<canvas id="iconCanvas" width="19" height="19"></canvas>
 	<script src="yui-min.js"></script>
